--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python"
-    }
-  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "main.py"
+      "dest": "app/api/index.py"
     }
-  ]
+  ],
+  "functions": {
+    "app/api/index.py": {
+      "maxDuration": 30
+    }
+  }
 }
 
